--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
+<title>@JeffreyKuik</title>
+
 <svg width="960" height="500"></svg>
 
 <link rel="stylesheet" href="index.css">
